--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="box Calculator">
         <h3>Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
-        <img src="images/icon-Calculator.svg" alt="" />
+        <img src="images/icon-calculator.svg" alt="" />
       </div>
     </div>
   </body>
